[gd_scene load_steps=3 format=3 uid="uid://cdkdrhhls4ett"]

[ext_resource type="Script" uid="uid://bdwyrbafyde67" path="res://common/match.gd" id="1_ajuwo"]
[ext_resource type="PackedScene" uid="uid://dtaf5jyt5pdui" path="res://client/card.tscn" id="2_8f6xv"]

[node name="Match" type="Node"]
script = ExtResource("1_ajuwo")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ID" type="Label" parent="UI"]
offset_left = 1003.0
offset_top = 11.0
offset_right = 1145.0
offset_bottom = 34.0
text = "id"
horizontal_alignment = 2

[node name="CardFan" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 53.0
offset_top = -165.0
offset_right = 773.0
offset_bottom = -90.0
size_flags_horizontal = 3

[node name="Card1" parent="UI/CardFan" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 133.52777
offset_top = -276.53766
offset_right = 183.52777
offset_bottom = -201.53766
rotation = -1.2217305
pivot_offset = Vector2(214, 210)

[node name="Card2" parent="UI/CardFan" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 189.52777
offset_top = -158.53766
offset_right = 239.52777
offset_bottom = -83.53766
rotation = -0.87266463
pivot_offset = Vector2(160, 210)

[node name="Card3" parent="UI/CardFan" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 189.52777
offset_top = -64.53766
offset_right = 239.52777
offset_bottom = 10.462341
rotation = -0.5235988
pivot_offset = Vector2(106, 210)

[node name="Card4" parent="UI/CardFan" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 178.52777
offset_top = -18.537659
offset_right = 228.52777
offset_bottom = 56.46234
rotation = -0.17453292
pivot_offset = Vector2(52, 210)

[node name="Card5" parent="UI/CardFan" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 134.52777
offset_top = -18.537659
offset_right = 184.52777
offset_bottom = 56.46234
rotation = 0.17453292
pivot_offset = Vector2(-2, 210)

[node name="Card6" parent="UI/CardFan" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 121.52777
offset_top = -63.53766
offset_right = 171.52777
offset_bottom = 11.462341
rotation = 0.5235988
pivot_offset = Vector2(-56, 210)

[node name="Card7" parent="UI/CardFan" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 121.52777
offset_top = -157.53766
offset_right = 171.52777
offset_bottom = -82.53766
rotation = 0.87266463
pivot_offset = Vector2(-110, 210)

[node name="Card8" parent="UI/CardFan" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 0
offset_left = 179.52777
offset_top = -276.53766
offset_right = 229.52777
offset_bottom = -201.53766
rotation = 1.2217305
pivot_offset = Vector2(-164, 210)

[node name="Cards2" type="HBoxContainer" parent="UI"]
visible = false
anchors_preset = 10
anchor_right = 1.0
offset_left = 54.0
offset_top = -225.0
offset_right = 54.0
offset_bottom = -150.0
grow_horizontal = 2
size_flags_horizontal = 3
alignment = 1

[node name="Card1" parent="UI/Cards2" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Card2" parent="UI/Cards2" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Card3" parent="UI/Cards2" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Card4" parent="UI/Cards2" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Card5" parent="UI/Cards2" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Card6" parent="UI/Cards2" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Card7" parent="UI/Cards2" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Card8" parent="UI/Cards2" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(50, 75)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Player1" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0

[node name="Name" type="Label" parent="UI/Player1"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 969.0
offset_top = 40.0
offset_right = 1147.0
offset_bottom = 63.0
grow_horizontal = 0
text = "player"
horizontal_alignment = 2

[node name="Cards" type="HBoxContainer" parent="UI/Player1"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 433.0
offset_right = 1121.0
offset_bottom = 628.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1

[node name="Card1" parent="UI/Player1/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(132.6, 0)
layout_mode = 2
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card2" parent="UI/Player1/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(132.6, 0)
layout_mode = 2
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card3" parent="UI/Player1/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(132.6, 0)
layout_mode = 2
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card4" parent="UI/Player1/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(132.6, 0)
layout_mode = 2
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card5" parent="UI/Player1/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(132.6, 0)
layout_mode = 2
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card6" parent="UI/Player1/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(132.6, 0)
layout_mode = 2
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card7" parent="UI/Player1/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(132.6, 0)
layout_mode = 2
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card8" parent="UI/Player1/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(132.6, 0)
layout_mode = 2
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Player2" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0

[node name="Name" type="Label" parent="UI/Player2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 964.0
offset_top = 374.0
offset_right = 1142.0
offset_bottom = 397.0
grow_horizontal = 0
text = "player"
horizontal_alignment = 2

[node name="Cards" type="HBoxContainer" parent="UI/Player2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1074.0
offset_top = 359.0
offset_right = 1342.0
offset_bottom = 434.0
grow_horizontal = 2
rotation = -1.5707964
size_flags_horizontal = 3
alignment = 1

[node name="Card1" parent="UI/Player2/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card2" parent="UI/Player2/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card3" parent="UI/Player2/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card4" parent="UI/Player2/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card5" parent="UI/Player2/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card6" parent="UI/Player2/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card7" parent="UI/Player2/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card8" parent="UI/Player2/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Player3" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0

[node name="Name" type="Label" parent="UI/Player3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 241.0
offset_top = 22.0
offset_right = 419.0
offset_bottom = 45.0
grow_horizontal = 0
text = "player"
horizontal_alignment = 2

[node name="Cards" type="HBoxContainer" parent="UI/Player3"]
layout_mode = 0
offset_left = 436.0
offset_top = 13.0
offset_right = 704.0
offset_bottom = 88.0
size_flags_horizontal = 3
alignment = 1

[node name="Card1" parent="UI/Player3/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card2" parent="UI/Player3/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card3" parent="UI/Player3/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card4" parent="UI/Player3/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card5" parent="UI/Player3/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card6" parent="UI/Player3/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card7" parent="UI/Player3/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card8" parent="UI/Player3/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Player4" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0

[node name="Name" type="Label" parent="UI/Player4"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 17.0
offset_top = 365.0
offset_right = 195.0
offset_bottom = 388.0
grow_horizontal = 0
text = "player"

[node name="Cards" type="HBoxContainer" parent="UI/Player4"]
layout_mode = 0
offset_left = 75.0
offset_top = 68.0
offset_right = 343.0
offset_bottom = 143.0
rotation = 1.5707964
size_flags_horizontal = 3
alignment = 1

[node name="Card1" parent="UI/Player4/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card2" parent="UI/Player4/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card3" parent="UI/Player4/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card4" parent="UI/Player4/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card5" parent="UI/Player4/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card6" parent="UI/Player4/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card7" parent="UI/Player4/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Card8" parent="UI/Player4/Cards" instance=ExtResource("2_8f6xv")]
custom_minimum_size = Vector2(30, 45)
layout_mode = 2
disabled = true
metadata/_edit_lock_ = true

[node name="Pot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = -76.0
offset_right = -76.0

[node name="Card1" parent="UI/Pot" instance=ExtResource("2_8f6xv")]
layout_mode = 0
offset_left = 377.0
offset_top = 247.0
offset_right = 477.0
offset_bottom = 394.0
disabled = true
card = "none"
metadata/_edit_lock_ = true

[node name="Card2" parent="UI/Pot" instance=ExtResource("2_8f6xv")]
layout_mode = 0
offset_left = 498.0
offset_top = 163.0
offset_right = 598.0
offset_bottom = 310.0
card = "none"
metadata/_edit_lock_ = true

[node name="Card3" parent="UI/Pot" instance=ExtResource("2_8f6xv")]
layout_mode = 0
offset_left = 375.0
offset_top = 82.0
offset_right = 475.0
offset_bottom = 229.0
card = "none"
metadata/_edit_lock_ = true

[node name="Card4" parent="UI/Pot" instance=ExtResource("2_8f6xv")]
layout_mode = 0
offset_left = 250.0
offset_top = 166.0
offset_right = 350.0
offset_bottom = 313.0
card = "none"
metadata/_edit_lock_ = true

[node name="Draw" parent="UI" instance=ExtResource("2_8f6xv")]
offset_left = 823.0
offset_top = 159.0
offset_right = 923.0
offset_bottom = 306.0
disabled = true

[node name="New" parent="UI" instance=ExtResource("2_8f6xv")]
offset_left = 582.0
offset_top = 231.0
offset_right = 714.6
offset_bottom = 426.0
card = "none"

[node name="GameOver" type="Label" parent="UI"]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 160
text = "You Win"
horizontal_alignment = 1
